--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,10 @@ body {
     display: none;
 }
 
+.choose__color-btn:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 /*----composition----*/
 
 
