--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ body {
     border-radius: 30px;
 }
 
+.menu__link:hover {
+    color: #727272;
+}
+
 .header__content-images {
     text-align: center;
     padding-bottom: 50px;
@@ -310,6 +314,12 @@ body {
     color: black;
     background-color: white;
     margin-top: 25px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.audio__btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 /*----footer----*/
@@ -334,3 +344,4 @@ body {
     align-items: center;
     gap: 20px;
 }
+
